--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(SW_RACER_RE)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+add_link_options(-static)
 add_compile_options(
     -Wno-multichar
     -Werror=incompatible-pointer-types
@@ -64,21 +65,27 @@ add_custom_command(
 )
 add_custom_target(generate_hooks ALL DEPENDS generated_hooks.stamp)
 
-# create our hook library
-file(GLOB HOOK_SOURCES
-    src/hook.c
-    src/generated/hook_generated.c
-    src/dllMainDInput.c)
-add_library(dinput_hook SHARED ${HOOK_SOURCES})
-add_dependencies(dinput_hook generate_hooks)
-target_link_libraries(dinput_hook PRIVATE swe1r_functions swe1r_globals ddraw)
-target_link_options(dinput_hook PRIVATE "-Wl,--kill-at")
+if (OFF)
+    # create our hook library
+    file(GLOB HOOK_SOURCES
+        src/hook.c
+        src/generated/hook_generated.c
+        src/dllMainDInput.c)
+    add_library(dinput_hook SHARED ${HOOK_SOURCES})
+    add_dependencies(dinput_hook generate_hooks)
+    target_link_libraries(dinput_hook PRIVATE swe1r_functions swe1r_globals ddraw)
+    target_link_options(dinput_hook PRIVATE "-Wl,--kill-at")
 
-if (GAME_DIR)
-    set_target_properties(dinput_hook PROPERTIES
-            OUTPUT_NAME dinput
-            PREFIX ""
-            RUNTIME_OUTPUT_DIRECTORY "${GAME_DIR}")
-else()
-    message(WARNING "Set 'GAME_DIR' to the directory of the game to automatically place 'dinput.dll' there when building.")
+    if (GAME_DIR)
+        set_target_properties(dinput_hook PROPERTIES
+                OUTPUT_NAME dinput
+                PREFIX ""
+                RUNTIME_OUTPUT_DIRECTORY "${GAME_DIR}")
+    else()
+        message(WARNING "Set 'GAME_DIR' to the directory of the game to automatically place 'dinput.dll' there when building.")
+    endif()
 endif()
+
+add_subdirectory(dinput_hook)
+
+add_subdirectory(annodue_collision_viewer)
